# polar

./: .flake8  .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/data/core/: index.html
api/data/dataloaders/: index.html
api/data/functionals/: index.html
api/data/sample_data/: index.html
api/data/transforms/: index.html
api/polar/ae/: index.html
api/polar/polar/: index.html
api/polar/so3/: index.html
api/train/: index.html
api/visualize/: index.html
docs/: index.md  requirements.txt
docs/_static/: custom_css.css
docs/api/: train.md  visualize.md
docs/api/data/: core.md  dataloaders.md  functionals.md  sample_data.md  transforms.md
docs/api/polar/: ae.md  polar.md  so3.md
examples/: examples.ipynb  utils.py
examples/examples/: index.html
polar/: _version.py
polar/example/: data.pt
polar/network/: __init__.py  model.py
polar/train/: __init__.py  train.py
polar/train/data/: __init__.py  augmented_loader.py  factory.py  modelnet.py
search/: search_index.json
src/polar/: __init__.py  polar.py  so3.py
src/polar/example/: __init__.py  utils.py
src/polar/network/weights/: final.toml
src/polar/train/data/transforms/: __init__.py  core.py  functionals.py  transforms.py
