[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "polar"
version = "0.1.0"
dependencies = [
  "numpy",
  "pytorch3d",
  "torch",
  "torch_geometric",
  "tqdm",
  "typing-extensions ; python_version < '3.10'"
]
requires-python = ">=3.7"
authors = [
  { name="Luc Vedrenne", email="vedrenne@unistra.fr" },
]
description = "POLAR package"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
train = [
  "h5py",
  "toml"
]
viz = [
  "plotly"
]
all = [
  "polar[train]",
  "polar[vis]",
]


[project.urls]
Repository = "https://github.com/pypolar/polar.git"
